kube-files/client.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-client
  namespace: chat-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: chat-client
  template:
    metadata:
      labels:
        app: chat-client
    spec:
      containers:
      - name: chat-client
        image: ${ECR_REGISTRY}/chat-client:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: chat-client
  namespace: chat-app
spec:
  selector:
    app: chat-client
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: NodePort
